crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_min_lines_but_max_line_length.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="1049"
  total_lines="50"
  display_lines="1-8"
  pattern="search"
  glob="*.txt"
  reason="WARNING: Search results are INCOMPLETE — output exceeded the 1049 bytes size limit and was truncated. The displayed results do NOT represent all matches. Please use a more specific search pattern to ensure full coverage."
><![CDATA[foo.txt:1:Match line 1: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:2:Match line 2: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:3:Match line 3: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:4:Match line 4: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:5:Match line 5: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:6:Match line 6: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:7:Match line 7: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:8:Match line 8: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB]]>
</search_results>
