crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_multiline_pattern.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Search Results

- **Path**: /home/user/project
- **Max Bytes Allowed**: 256000
- **Total Lines**: 1
- **Display Lines**: 1-1
- **Pattern**: Struct.*\{.*field

```
types.rs:10:struct User {
    field: String
```
