crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_with_after_context.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Search Results

- **Path**: /home/user/project
- **Max Bytes Allowed**: 256000
- **Total Lines**: 1
- **Display Lines**: 1-1
- **Pattern**: Todo

```
src/main.rs:15:// TODO: Implement this feature
src/main.rs-fn main() {
src/main.rs-    println!("Hello");
```
