crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_with_before_context.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Search Results

- **Path**: /home/user/project
- **Max Bytes Allowed**: 256000
- **Total Lines**: 1
- **Display Lines**: 1-1
- **Pattern**: Error

```
log.txt-line 47: INFO startup
log.txt-line 48: DEBUG processing
log.txt-line 49: WARN slow operation
log.txt:50:ERROR: Something went wrong
```
