crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_with_context_lines.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Search Results

- **Path**: /home/user/project
- **Max Bytes Allowed**: 256000
- **Total Lines**: 1
- **Display Lines**: 1-1
- **Pattern**: Match

```
test.txt-line 8 before context
test.txt-line 9 before context
test.txt:10:This is the MATCH line
test.txt-line 11 after context
test.txt-line 12 after context
```
