crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_with_file_type.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Search Results

- **Path**: /home/user/project
- **Max Bytes Allowed**: 256000
- **Total Lines**: 2
- **Display Lines**: 1-2
- **Pattern**: Class
- **File Type**: Py

```
models.py:1:class User:
views.py:5:class HomeView:
```
